Made it possible to add your own test templates